Updated about pages + add bib.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,23 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@ARTICLE{10.3389/fsufs.2023.1263879,
+
+AUTHOR={Chen, Huazhang  and Li, Jiewei  and Wang, Yuxi  and Zhou, Yannan  and Duan, Zhengfeng  and Duan, Tingting },
+
+TITLE={Residue determination and dietary risk assessment of mesotrione, nicosulfuron, atrazine and its four metabolites in maize in China},
+
+JOURNAL={Frontiers in Sustainable Food Systems},
+
+VOLUME={7},
+
+YEAR={2023},
+
+URL={https://www.frontiersin.org/journals/sustainable-food-systems/articles/10.3389/fsufs.2023.1263879},
+
+DOI={10.3389/fsufs.2023.1263879},
+
+ISSN={2571-581X},
 }
 
 @book{einstein1956investigations,
